// Copyright 2015 gRPC authors.

syntax = "proto3";

package echo;

service EchoServer {
  rpc Echo (EchoRequest) returns (EchoReply) {}
}

message EchoRequest {
  string request = 1;
}

message EchoReply {
  string response = 1;
}
