Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Enable fork support for gRPC
ENV['GRPC_ENABLE_FORK_SUPPORT'] = "1"
# Ensure this script only runs on Linux as forking behavior may be platform-specific
fail "forking only supported on linux" unless RUBY_PLATFORM =~ /linux/

# Set up load paths for required libraries
this_dir = File.expand_path(File.dirname(__FILE__))
protos_lib_dir = File.join(this_dir, 'lib')
grpc_lib_dir = File.join(File.dirname(this_dir), 'lib')
$LOAD_PATH.unshift(grpc_lib_dir) unless $LOAD_PATH.include?(grpc_lib_dir)
$LOAD_PATH.unshift(protos_lib_dir) unless $LOAD_PATH.include?(protos_lib_dir)
$LOAD_PATH.unshift(this_dir) unless $LOAD_PATH.include?(this_dir)

# Require necessary libraries
require 'sanity_check_dlopen'  # Library for checking dynamic loading
require 'grpc'                 # gRPC library
require 'end2end_common'       # Common utilities for end-to-end tests

# Makes a simple RPC call to the echo service
# @param stub [GRPC::ClientStub] The gRPC client stub
# @return [Echo::EchoResponse] The response from the server
def do_rpc(stub)
  stub.echo(Echo::EchoRequest.new(request: 'hello'), deadline: Time.now + 300)
end

# Runs a client scenario involving multiple forks to test gRPC fork support
# @param stub [GRPC::ClientStub] The gRPC client stub
def run_client(stub)
  # Initial RPC call before forking
  do_rpc(stub)
  
  # Parent process prepares for fork
  with_logging("parent: GRPC.prefork") { GRPC.prefork }
  
  # First child process
  pid = fork do
    # Child initializes after fork
    with_logging("child1: GRPC.postfork_child") { GRPC.postfork_child }
    with_logging("child1: first post-fork RPC") { do_rpc(stub) }
    
    # Child prepares for second fork
    with_logging("child1: GRPC.prefork") { GRPC.prefork }
    
    # Grandchild process
    pid2 = fork do
      # Grandchild initializes after fork
      with_logging("child2: GRPC.postfork_child") { GRPC.postfork_child }
      with_logging("child2: first post-fork RPC") { do_rpc(stub) }
      with_logging("child2: second post-fork RPC") { do_rpc(stub) }
      STDERR.puts "child2: done"
    end
    
    # Child continues after forking grandchild
    with_logging("child1: GRPC.postfork_parent") { GRPC.postfork_parent }
    with_logging("child1: second post-fork RPC") { do_rpc(stub) }
    Process.wait(pid2)  # Wait for grandchild to finish
    STDERR.puts "child1: done"
  end
  
  # Parent continues after forking child
  with_logging("parent: GRPC.postfork_parent") { GRPC.postfork_parent }
  with_logging("parent: first post-fork RPC") { do_rpc(stub) }
  with_logging("parent: second post-fork RPC") { do_rpc(stub) }
  Process.wait pid  # Wait for child to finish
  STDERR.puts "parent: done"
end

# Main entry point for the test
def main
  this_dir = File.expand_path(File.dirname(__FILE__))
  echo_server_path = File.join(this_dir, 'echo_server.rb')
  
  # Create pipes for inter-process communication
  to_child_r, _to_child_w = IO.pipe
  to_parent_r, to_parent_w = IO.pipe

  # Start the echo server in a separate process
  Process.spawn(RbConfig.ruby, echo_server_path, in: to_child_r, out: to_parent_w, err: "server_log")
  
  # Close unused pipe ends
  to_child_r.close
  to_parent_w.close
  
  # Get server port from the pipe
  child_port = to_parent_r.gets.strip
  STDERR.puts "server running on port: #{child_port}"
  
  # Create gRPC client stub
  stub = Echo::EchoServer::Stub.new("localhost:#{child_port}", :this_channel_is_insecure)
  
  # Run the client scenario twice to verify behavior
  2.times do
    run_client(stub)
  end
end

main
```

Key aspects documented:
1. The purpose of each major function
2. The fork hierarchy and gRPC initialization sequence
3. Inter-process communication setup
4. The test scenario flow
5. Important configuration settings
6. Error handling and platform requirements

The comments explain both the high-level test scenario and the implementation details, making it easier for future developers to understand and maintain this test code.